xsettings: Handle rgba-order key

Seeing as we have a key to set that up, let's hook it up.

https://bugzilla.gnome.org/show_bug.cgi?id=657525